manifests/apps/headlamp/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames: []
  rules:
  - backendRefs:
    - name: headlamp
      namespace: headlamp
      kind: Service
      port: 80
