manifests/apps/headlamp/base/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: headlamp
  namespace: headlamp
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: headlamp
  ingress:
    - fromEntities:
        - ingress
        - remote-node
      toPorts:
        - ports:
            - port: "80"
            - port: "4466"
            - port: "6443"
    - fromEntities:
        - kube-apiserver
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: pangolin-tunnel
      toPorts:
        - ports:
            - port: "80"
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
